--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
       padding-bottom: 100px;">
 
       <a 
-        class="navbar-brand" href style="
+        class="navbar-brand" href="index.html" style="
         font-size: 3rem;
         line-height: 1.5;
         ">tindog
