download button works now and all nav bars look the same

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           
           <ul class="navbar-nav ms-auto">
             <li class="navbar-item">
-              <a class="nav-link" style="color: #fafafa" href="">Download</a>
+              <a class="nav-link" style="color: #fafafa" onclick="handleDownloadClick()" href="">Download</a>
             </li>
             <li class="navbar-item">
-              <a class="nav-link" style="color: #fafafa" href="Pricing.html">Pricing</a>
+              <a class="nav-link" style="color: #fafafa" href="pricing.html">Pricing</a>
             </li>
             <li class="navbar-item">
               <a class="nav-link" style="color: #fafafa" href="contact.html">Contact</a>
