--- a/contact.html
+++ b/contact.html
@@ -29,32 +29,32 @@
 
       <!-- Nav Bar -->
 
-    <nav class="contact-nav navbar navbar-expand-lg navbar-dark" style="
-      padding-bottom: 100px;">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="
+            padding-bottom: 100px;">
 
-      <a 
-        class="navbar-brand" href="index.html" style="
-        font-size: 3rem;
-        line-height: 1.5;
-        ">tindog
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <ul class="navbar-nav ms-auto">
-          <li class="navbar-item">
-            <a class="nav-link" style="color: #fafafa" href="">Download</a>
-          </li>
-          <li class="navbar-item">
-            <a class="nav-link" style="color: #fafafa" href="Pricing.html">Pricing</a>
-          </li>
-          <li class="navbar-item">
-            <a class="nav-link" style="color: #fafafa" href="contact.html">Contact</a>
-          </li>
-          </ul>
-      </div>
-    </nav>
+            <a class="navbar-brand" href="/index.html" style="
+            font-size: 3rem;
+            line-height: 1.5;
+            ">tindog</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+                <ul class="navbar-nav ms-auto">
+                <li class="navbar-item">
+                    <a class="nav-link" onclick="handleDownloadClick()" style="color: #fafafa" href="">Download</a>
+                </li>
+                <li class="navbar-item">
+                    <a class="nav-link" style="color: #fafafa" href="pricing.html">Pricing</a>
+                </li>
+                <li class="navbar-item">
+                    <a class="nav-link" style="color: #fafafa" href="/contact.html">Contact</a>
+                </li>
+                </ul>
+            </div>
+        </nav>
 
     <section style="background-color: #18181b;" id="testimonials">
         <h1>Contact us</h1>
