--- a/pricing.html
+++ b/pricing.html
@@ -43,13 +43,13 @@
 
                 <ul class="navbar-nav ms-auto">
                 <li class="navbar-item">
-                    <a class="nav-link" href="">Download</a>
+                    <a class="nav-link" style="color: #fafafa" onclick="handleDownloadClick()" href="">Download</a>
                 </li>
                 <li class="navbar-item">
-                    <a class="nav-link" href="/info.html">Pricing</a>
+                    <a class="nav-link" style="color: #fafafa" href="pricing.html">Pricing</a>
                 </li>
                 <li class="navbar-item">
-                    <a class="nav-link" href="/contact.html">Contact</a>
+                    <a class="nav-link" style="color: #fafafa" href="/contact.html">Contact</a>
                 </li>
                 </ul>
             </div>
