--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark" style="
             padding-bottom: 100px;">
 
-            <a class="navbar-brand" href="/index.html" style="
+            <a class="navbar-brand" href="index.html" style="
             font-size: 3rem;
             line-height: 1.5;
             ">tindog</a>
@@ -50,7 +50,7 @@
                     <a class="nav-link" style="color: #fafafa" href="pricing.html">Pricing</a>
                 </li>
                 <li class="navbar-item">
-                    <a class="nav-link" style="color: #fafafa" href="/contact.html">Contact</a>
+                    <a class="nav-link" style="color: #fafafa" href="contact.html">Contact</a>
                 </li>
                 </ul>
             </div>
